Fix typo in about page filename

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -36,7 +36,7 @@ collections:
     #       widget: markdown
     - name: about
       label: About
-      file: src/routes/About.mdx
+      file: src/routes/about.mdx
       fields:
         - name: title
           label: Title
